-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0, 5.9.1, 5.9.2, 5.9.3, 5.10.0
-
None
-
Tested on Desktop Linux and iOS iPad
-
d1706827085d648ccef13e1df74796f19d455e89
StackView eats all touch events and doesn't propagate unhandled events to parent items.
This only happens with touch events, with mouse events everything works correctly. Please see attached testcase (works fine on desktop with mouse, but fails on iOS).
This is a regression from Qt 5.8
- relates to
-
QTBUG-61785 Non-interactive controls are blocking touch
-
- Closed
-