StackView: don't block touch

Unlike with mouse events there's setAcceptedMouseButtons(), currently
there's no way to control whether a control receives touch events or
not. As a temporary workaround until QQuickItem::setAcceptTouchEvents()
has been added, we'll have to ignore touch events by hand.

Task-number: QTBUG-65084
Change-Id: I3d51bdc80981557399f3bdfd181e359679cd1c20
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>